--- a/MarshfieldTimeClock_V1.1/MarshfieldTimeClock_V1.1/Web.config
+++ b/MarshfieldTimeClock_V1.1/MarshfieldTimeClock_V1.1/Web.config
@@ -8,6 +8,9 @@
     <add name="DBCS"
          connectionString="Data Source=stusql.ckwia8qkgyyj.us-east-1.rds.amazonaws.com;Initial Catalog=CIS260-Timeclock;Persist Security Info=True;User ID=cis260Timeclock;Password=cis260*SP18"
          providerName="System.Data.SqlClient"/>
+    <add name="MyDbConn"
+         connectionString="Server=stusql.ckwia8qkgyyj.us-east-1.rds.amazonaws.com; Database=CIS260-Timeclock; User Id=cis260Timeclock; password=cis260*SP18"
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
